fix(alert): remove wrong width on icon size

--- a/packages/core/src/components/alert/alert.scss
+++ b/packages/core/src/components/alert/alert.scss
@@ -117,7 +117,6 @@
   font-size: var(--icon-size);
   /* @todo(icons): re-evaluate this when finalizing the icon package */
   margin-top: 2px;
-  width: var(--spacing-medium);
 }
 
 .atom-close {
